@@ -1,5 +1,7 @@
-@comment $NetBSD: PLIST,v 1.2 2002/09/22 10:35:48 cjep Exp $
+@comment $NetBSD: PLIST,v 1.3 2002/12/08 12:44:13 cjep Exp $
+bin/leafnode-version
 bin/newsq
+man/man1/leafnode-version.1
 man/man1/newsq.1
 man/man8/applyfilter.8
 man/man8/checkgroups.8
