@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.724 2002/12/08 11:38:25 jmmv Exp $
+$NetBSD: CHANGES,v 1.725 2002/12/08 12:44:12 cjep Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3864,3 +3864,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated cyrus-imapd to 2.1.11 [chris 2002-12-08]
 	Added covered-current-20021127 [dmcmahill 2002-12-07]
 	Updated sysbuild to 1.3 [jmmv 2002-12-08]
+	Updated leafnode to 1.9.30 [cjep 2002-12-08]
